add gemini
